--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="colorPrimary">#303f9f</color>
+    <color name="colorPrimaryVariant">#303f9f</color>
+    <color name="colorSecondary">#536dfe</color>
+    <color name="colorSecondaryVariant">#536dfe</color>
+    <color name="colorSurface">#FFFFFFFF</color>
+    <color name="colorOnSurface">#FF000000</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#878787</color>
+    <color name="blueGrey">#ECEFF1</color>
+    <color name="colorBtnPrimary">#2196F3</color>
+    <color name="colorBtnPrimaryVariant">#1976D2</color>
+    <color name="colorBtnError">#F44336</color>
+    <color name="colorBtnErrorVariant">#D32F2F</color>
+    <color name="colorGreyLight">#ECECEC</color>
 </resources>
