--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,8 @@
     <dimen name="size_layout_empty_cart">80dp</dimen>
     <dimen name="big_radius">40dp</dimen>
     <dimen name="size_not_results_icon">40dp</dimen>
+    <dimen name="width_images_movie">200dp</dimen>
+    <dimen name="height_images_movie">160dp</dimen>
 
     <!-- text -->
     <dimen name="medium_text_size">20sp</dimen>
